--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">About</a>
+            <a class="nav-link active" aria-current="page" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Work</a>
@@ -33,6 +33,13 @@
     </div>
   
   </nav>
+
+  <div class="p-5 mb-4 bg-body-tertiary rounded-3 about">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">About Me</h1>
+      <p class="col-md-8 fs-4">My name is Nana Amankwah and i am an upcoming front-end developer, based out of london and whoose constantly trying to improve his coding skills and break into the industry. Outside of coding my hobbies include reading novels, watching movies and playing basketball and football. </p>
+    </div>
+  </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
